--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                     <div class="description">
                         <span class="name">{{product.name}}</span>
                         <span class="price">{{products.price}}</span>
-                        <div class="quantity-area">
-                            <button>-</button>
+                        <div class="quantity-area" v-if="product.active" >
+                            <button @click.stop="product.quantity-=1" :disabled="product.quantity <= 1" >-</button>
                             <span class="quantity">{{product.quantity}}</span>
-                            <button>+</button>
+                            <button @click.stop="product.quantity+=1" >+</button>
                         </div>
                     </div>
                 </div>
                 
             </section>
 
-            <section class="summary">
+            <section class="summary" vif="total()>0">
                 <strong>Resumo do pedido</strong>
                 <table>
                     <thead>
@@ -49,14 +49,16 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1x Big Mac</td>
-                            <td>5.99</td>
+                        <tr v-for="product in products">
+                            <template v-if="product.active">
+                                <td >{{product.quantity + 'x' + product.name}}</td>
+                                <td >{{(product.quantity * product.price).toFixed(2)}}</td>
+                            </template>                          
                         </tr>
                         
                         <tr>
                             <th>Total</th>
-                            <th>5.99</th>
+                            <th>{{total()}}</th>
                         </tr>
                     </tbody>
                 </table>
